--- a/mini_project/index.html
+++ b/mini_project/index.html
@@ -14,7 +14,7 @@
           .then((response) => response.json())
           .then(users => {
             let div = document.createElement('div');
-            div.setAttribute('class','main_div');
+            div.setAttribute('class','main1');
 
             for (const user of users) {
               let div2 = document.createElement('div');
