--- a/mini_project/user_details.html
+++ b/mini_project/user_details.html
@@ -70,7 +70,7 @@
             inner_div3.appendChild(btn_div);
 
             let show_post_title = document.createElement('button');
-            show_post_title.innerText = 'post of current user';
+            show_post_title.innerText = 'posts of current user';
             show_post_title.setAttribute('class','pb');
             btn_div.appendChild(show_post_title);
 
